# BDC

./: .dockerignore  .gitignore  Dockerfile  README.md  bdc.py  bdc_api.py  docker-compose.yml  function_app.py  importbdc.do  main.py  notebook.ipynb  pyproject.toml  requirements.txt  speeddata.py  utils.py
.github/workflows/: main_speeddata.yml
db/: postgres_db.py  schema.py
rag/: prompts.py  rag_langchain.py  rag_openai.py  tools.py
speed_data/: .funcignore
src/: bdc_api.py  main.py  postgres_db.py  rag.py  rag_langchain.py  supabase_db.py  utils.py
streamlit_ui/: app.py
supabase/: config.toml
tests/: test_bdc_api.py  test_combineCSVstoDataframe.py  test_copy_data_to_postgres.py  test_db_operations.py  test_get_table_schema.py  test_table_creation.py  test_utils.py
ui/: app.py
