[project]
dependencies = [
    'httpx',
    'pandas',
    'python-dotenv',
    'supabase',
    'tqdm',
    'pytest',
    'streamlit',
    'sqlalchemy',
    "psycopg2-binary>=2.9.10",
    "psycopg>=3.2.4",
]
name = "Broadband_Data_Collection"
version = "0.1.0"
description = "A package for the BDC project"
readme = "README.md"
requires-python = ">=3.13"
